# any

./: .gitignore  README.md  __pyproject.toml  pyproject.toml  r.txt  runserver.py  test.py
docmagic/: asgi.py  urls.py  wsgi.py
media/: example.doc
mkk/: admin.py  apps.py  urls.py  views.py
mkk/forms/: f_add_debtors.py  f_add_departments.py
mkk/migrations/: 0001_initial.py
mkk/models/: m_debtors.py  m_department.py
mkk/templates/: add_debtors.html  add_departments.html  base.html  debtor_detail.html  debtors.html  departments.html  index.html  person.html
settings/: prod.py  settings.py
static/css/: style.css
