[tool.poetry]
name = "docmagic"
version = "0.1.0"
description = ""
authors = ["Roman Gartman <80738418+Regum@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
psycopg2 = "^2.9.9"
pymorphy2 = "^0.9.1"
environs = {extras = ["django"], version = "^11.0.0"}

[tool.poetry.scripts]
start = 'runserver:runserver'
makemigrations = 'runserver:makemigrations'
migrate = 'runserver:migrate'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
